lightHouse: accessibility, SEO practices check and README

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Author: Greeshma Reddy Gaddam, GG APP. 
+                                      tech used: vue, pinia, vite, node, HTML, CSS, JS, ES6, API">
     <title>Greeshma's App</title>
   </head>
   <body>
